# mention-market-research

./: .gitignore  README.md  config.yaml  kalshi_scanner.yaml  pyproject.toml  requirements.lock.txt  requirements.txt  serve.py
outputs/reports/: REPORT.md  dm_matrix.csv  metrics.csv  mz_results.csv  oos_predictions.csv
src/kalshi_scanner/: __init__.py  __main__.py  alerts.py  categories.py  config.py  dashboard.py  data_quality.py  edge.py  feature_resolver.py  fees.py  flags.py  kalshi_client.py  market.py  mention_query.py  model_provider.py  monitoring.py  paper_trading.py  portfolio.py  scanner.py  signal.py  signal_generator.py  sizing.py  slippage.py  store.py
src/mention_market/: __init__.py  config.py  efficiency.py  features.py  labeling.py  lookahead.py  pipeline.py  plots.py  schema.py  synthetic.py  validation.py
src/mention_market/models/: __init__.py  base.py  baseline.py  bayesian.py  gbdt.py  llm.py  logistic.py  preprocessing.py  survival.py
src/mention_market/sources/: __init__.py  gdelt.py  (+3 more)
tests/: conftest.py  kalshi_fakes.py  test_alerts.py  test_categories.py  test_config.py  test_data_quality.py  test_edge.py  test_efficiency.py  test_feature_resolver.py  test_features.py  test_fees.py  test_flags_dashboard.py  test_kalshi_client.py  test_labeling.py  test_lookahead.py  test_mention_query.py  test_model_provider.py  test_models.py  test_monitoring.py  test_paper_trading.py  test_pipeline.py  test_portfolio.py  test_scanner.py  test_signal_generator.py  test_sizing.py  test_slippage.py  test_store.py  test_synthetic.py  test_validation.py
(+2 files in other folders)
